--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,3 +1,10 @@
+{% if request.user.is_authenticated %}
+    <p>{{request.user}}</p>
+    <a href="{% url 'logout' %}">logout</a>
+{% else %}
+    <a href="{% url 'login' %}">login</a>
+{% endif %}
+<hr>
 <h1>My To Do List</h1>
 <a href="{% url 'create-task' %}">add task</a>
 <table>
