--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,6 +1,16 @@
-<a href="{% url 'tasks' %}">back</a>
-<form action="" method="post">
-    {% csrf_token %}
-    <p>are you sure you want to delete this task? {{task}} </p>
-    <input type="submit" value="delete">
-</form>
+{% extends 'base/main.html' %}
+
+{% block content %}
+
+    <div class="header-bar">
+        <a href="{% url 'tasks' %}">&#8592; back</a>
+    </div>
+    <div class="card-body">
+        <form action="" method="post">
+            {% csrf_token %}
+            <p>are you sure you want to delete this task? "{{task}}" </p>
+            <input class="button" type="submit" value="delete">
+        </form>
+    </div>
+
+{% endblock %}
