--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,8 +1,18 @@
-<h1>task form</h1>
+{% extends 'base/main.html' %}
 
-<form action="" method="post">
-    {% csrf_token %}
+{% block content %}
 
-    {{ form.as_p }}
-    <input type="submit" value="submit">
-</form>
+    <div class="header-bar">
+        <a href="{% url 'tasks' %}">&#8592; Back</a>
+    </div>
+
+    <div class="card-body">
+        <form method="post">
+            {% csrf_token %}
+            
+            {{ form.as_p }}
+            <input class="button" type="submit" value="submit">
+        </form>
+    </div>
+
+{% endblock %}
