--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,22 +1,51 @@
-{% if request.user.is_authenticated %}
-    <p>{{request.user}}</p>
-    <a href="{% url 'logout' %}">logout</a>
-{% else %}
-    <a href="{% url 'login' %}">login</a>
-{% endif %}
-<hr>
-<h1>My To Do List</h1>
-<a href="{% url 'create-task' %}">add task</a>
-<table>
-    <tr><th>item</th></tr>
-    {% for task in tasks %}
-    <tr>
-        <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">view</a></td>
-        <td><a href="{% url 'update-task' task.id %}">update</a></td>
-        <td><a href="{% url 'delete-task' task.id %}">delete</a></td>
-    </tr>
-    {% empty %}
+{% extends 'base/main.html' %}
+
+{% block content %}
+
+    <div class="header-bar">
+        <div>
+            <h1>Hello {{request.user|title}}</h1>
+            <h3 style="margin: 0;">You have <i>{{count}}</i> incomplete task{{count|pluralize:'s'}}</h3>
+        </div>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}">logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">login</a>
+        {% endif %}
+    </div>
+
+    <div id="search-add-wrapper">
+        <form method="get" style="margin-top: 20px;display: flex;">
+            <input type="search" name="search-area" value="{{search_input}}">
+            <input class="button" type="submit" value="search">
+        </form>
+        <a id="add-link" href="{% url 'create-task' %}">&#x2b;</a>
+    </div>
+
+
+    <div class="task-items-wrapper">
+        {% for task in tasks %}
+        <div class="task-wrapper">
+            {% if task.complete %}
+            <div class="task-title">
+                <div class="task-complete-icon">
+                    <i><s><a href="{% url 'update-task' task.id %}">{{task}}</a></s></i>
+                </div>
+            </div>
+            <a class="delete-link" href="{% url 'delete-task' task.id %}">&#215;</a>
+            {% else %}
+            <div class="task-title">
+                <div class="task-incomplete-icon">
+                    <a href="{% url 'update-task' task.id %}">{{task}}</a>
+                </div>
+            </div>
+            <a class="delete-link" href="{% url 'delete-task' task.id %}">&#215;</a>
+            {% endif %}
+        </div>
+        {% empty %}
         <h3>no items in list</h3>
-    {% endfor %}
-</table>
+        {% endfor %}
+    </div>
+
+    
+{% endblock %}
